--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "serve": "nodemon app.js"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.17.1",
-    "hbs": "~4.0.1",
+    "hbs": "^4.1.0",
     "method-override": "^2.3.8",
-    "morgan": "~1.8.1",
+    "morgan": "^1.10.0",
     "mysql2": "^1.2.0"
   },
   "repository": {
